--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Jun 04 14:29:55 CST 2023
-sdk.dir=C\:\\Users\\Hank\\AppData\\Local\\Android\\Sdk
+#Sun Jun 04 14:39:34 CST 2023
+sdk.dir=C\:\\Users\\a0987\\AppData\\Local\\Android\\Sdk
