--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,16 +3,22 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <application
+        android:name=".GlobalVariable"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:name=".GlobalVariable"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Tutorial"
         tools:targetApi="31">
+        <activity
+            android:name=".Signup_Act"
+            android:exported="false" />
+        <activity
+            android:name=".login_act"
+            android:exported="false" />
         <activity
             android:name=".China_Game2"
             android:exported="false" />
