--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:theme="@style/Theme.Tutorial"
         tools:targetApi="31">
         <activity
+            android:name=".China_Game3"
+            android:exported="false" />
+        <activity
             android:name=".China_Game2"
             android:exported="false" />
         <activity
