--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,45 @@
         android:theme="@style/Theme.Tutorial"
         tools:targetApi="31">
         <activity
+            android:name=".LeaderBoard"
+            android:exported="false" />
+        <activity
+            android:name=".Japan_Game5"
+            android:exported="false" />
+        <activity
+            android:name=".Japan_Game4"
+            android:exported="false" />
+        <activity
+            android:name=".Japan_Game3"
+            android:exported="false" />
+        <activity
+            android:name=".Japan_Game2"
+            android:exported="false" />
+        <activity
+            android:name=".Japan_Game1"
+            android:exported="false" />
+        <activity
+            android:name=".Italy_Game5"
+            android:exported="false" />
+        <activity
+            android:name=".Italy_Game4"
+            android:exported="false" />
+        <activity
+            android:name=".Italy_Game3"
+            android:exported="false" />
+        <activity
+            android:name=".Italy_Game2"
+            android:exported="false" />
+        <activity
+            android:name=".Italy_Game1"
+            android:exported="false" />
+        <activity
+            android:name=".China_Game5"
+            android:exported="false" />
+        <activity
+            android:name=".China_Game4"
+            android:exported="false" />
+        <activity
             android:name=".China_Game3"
             android:exported="false" />
         <activity
