--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,39 @@
         android:theme="@style/Theme.Tutorial"
         tools:targetApi="31">
         <activity
+            android:name=".Italy_intro4"
+            android:exported="false" />
+        <activity
+            android:name=".Italy_intro3"
+            android:exported="false" />
+        <activity
+            android:name=".Italy_intro2"
+            android:exported="false" />
+        <activity
+            android:name=".Italy_intro1"
+            android:exported="false" />
+        <activity
+            android:name=".Japan_unagi_intro"
+            android:exported="false" />
+        <activity
+            android:name=".Japan_sashimi_intro"
+            android:exported="false" />
+        <activity
+            android:name=".Japan_Fugu_intro"
+            android:exported="false" />
+        <activity
+            android:name=".Italy_into_main"
+            android:exported="false" />
+        <activity
+            android:name=".China_into_main"
+            android:exported="false" />
+        <activity
+            android:name=".Japan_into_main"
+            android:exported="false" />
+        <activity
+            android:name=".main_intro"
+            android:exported="false" />
+        <activity
             android:name=".main_page"
             android:exported="false" />
         <activity
