--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,18 @@
         android:theme="@style/Theme.Tutorial"
         tools:targetApi="31">
         <activity
+            android:name=".China_intro4"
+            android:exported="false" />
+        <activity
+            android:name=".China_intro3"
+            android:exported="false" />
+        <activity
+            android:name=".China_intro2"
+            android:exported="false" />
+        <activity
+            android:name=".China_intro1"
+            android:exported="false" />
+        <activity
             android:name=".Italy_intro4"
             android:exported="false" />
         <activity
