--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,5 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Sun Jun 04 14:39:34 CST 2023
-sdk.dir=C\:\\Users\\a0987\\AppData\\Local\\Android\\Sdk
+sdk.dir=/Users/howard/Library/Android/sdk
+```
